// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Watch 1`] = `
<div
  className="watch-grid"
>
  <Video
    className="video-container"
    id="vDjcWlCT8rg"
  />
  <VideoMetadata
    className="video-metadata"
    viewCount={1000}
  />
  <VideoInfo
    className="video-info-container"
  />
  <Comments
    className="comments"
  />
  <RelatedVideo
    className="related-videos"
  />
</div>
`;

exports[`renders WatchContainer 1`] = `
<div
  className="WatchContainer-grid"
>
  <Video
    className="video-container"
    id="vDjcWlCT8rg"
  />
  <VideoMetadata
    className="video-metadata"
    viewCount={1000}
  />
  <VideoInfo
    className="video-info-container"
  />
  <CommentsContainer
    className="comments"
  />
  <RelatedVideo
    className="related-videos"
  />
</div>
`;
